[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "binance>=0.3.50",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "python-binance>=1.0.29",
    "requests>=2.32.4",
    "streamlit>=1.46.0",
    "trafilatura>=2.0.0",
    "yfinance>=0.2.63",
    "websocket-client>=1.6.0",
    "ta>=0.10.2",
    "scipy>=1.11.0",
]
